--- a/src/views/kids_space/game_menu/dino_slider/styles.css
+++ b/src/views/kids_space/game_menu/dino_slider/styles.css
@@ -1,17 +1,20 @@
 .dino_slider {
-  background-color: beige;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+	background-color: beige;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.dino_slider .record_div {
+	color: var(--dark-color-transparency);
 }
 
 .dino_slider .dino_slider__board {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  width: 90vmin;
-  height: 90vmin;
-  margin: auto;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	width: 90vmin;
+	height: 90vmin;
+	margin: auto;
 }
 
 .dino_slider__header .dino_icon_button__button svg {
@@ -21,12 +24,12 @@
 }
 
 .dino_slider__switch {
-    max-width: 20vw;
-    margin-left: auto;
-    margin-right: 40px;
+	max-width: 20vw;
+	margin-left: auto;
+	margin-right: 40px;
 }
 
-.dino_slider__switch .dino_switch__form p{
-  margin-right: 0.2rem;
-  color: var(--dark-color-transparency)
+.dino_slider__switch .dino_switch__form p {
+	margin-right: 0.2rem;
+	color: var(--dark-color-transparency);
 }
